Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44495

Qt Quick does not work on Windows RT ARM devices (possible OpenGL problem)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.0 Beta
    • 5.4.1
    • GUI: OpenGL
    • Qt 5.4.1, Visual Studio 2013 Ultimate (Update 4), Microsoft Surface with Win 8.1
    • WinRT
    • 5814cd9

    Description

      When running a Qml Quick 2 store application on Windows RT 8.1 ARM (for instance on the Microsoft Surface) then the screen is distorted and no user input is possible.

      The console prints the following:

      D3D11: Removing Device.
      First-chance exception at 0x74E8F1FB in testproject.exe: Microsoft C++ exception: _com_error at memory location 0x02B4D088.
      First-chance exception at 0x74E8F1FB in testproject.exe: Microsoft C++ exception: _com_error at memory location 0x02B4DBF0.
      First-chance exception at 0x74E8F1FB in testproject.exe: Microsoft C++ exception: _com_error at memory location 0x02B4DED8.
      First-chance exception at 0x74E8F1FB in testproject.exe: Microsoft C++ exception: _com_error at memory location 0x02B4D088.
      First-chance exception at 0x74E8F1FB in testproject.exe: Microsoft C++ exception: _com_error at memory location 0x02B4DBF0.
      First-chance exception at 0x74E8F1FB in testproject.exe: Microsoft C++ exception: _com_error at memory location 0x02B4DED8.
      First-chance exception at 0x74E8F1FB in testproject.exe: Microsoft C++ exception: _com_error at memory location 0x02B4D088.
      First-chance exception at 0x74E8F1FB in testproject.exe: Microsoft C++ exception: _com_error at memory location 0x02B4DBF0.
      First-chance exception at 0x74E8F1FB in testproject.exe: Microsoft C++ exception: _com_error at memory location 0x02B4DED8.
      QEGLPlatformContext::swapBuffers(): eglError: 12302, this: 0x6553890

      The "eglError: 12302" console output is printed until the app is manually terminated.

      Running the same code on x86 tablets works fine.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andrew.knight Andrew Knight
            DanielSt Peter Staab
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes