winrt: initialize EGL display with automatic Trim and WARP

The minimum feature level is now detected before requesting a display.
If it is less than 9_3, use the WARP device instead.

Task-Id: QTBUG-44495
Task-Id: QTBUG-44694
Change-Id: I9f81f4f92269fab73c291f7373aa07236c7e5f98
Reviewed-by: Oliver Wolff <oliver.wolff@theqtcompany.com>
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@theqtcompany.com>