src/plugins/platforms/winrt/winrt.pro
@@ -10,7 +10,7 @@ QT += core-private gui-private platformsupport-private
 
 DEFINES *= QT_NO_CAST_FROM_ASCII __WRL_NO_DEFAULT_LIB__ GL_GLEXT_PROTOTYPES
 
-LIBS += $$QMAKE_LIBS_CORE -ldwrite
+LIBS += $$QMAKE_LIBS_CORE -ldwrite -ld3d11
 INCLUDEPATH += $$QT_SOURCE_TREE/src/3rdparty/freetype/include
 
 SOURCES = \
